After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778428 - souphttpsrc: Original connection does not cleared if the uri is redirected
souphttpsrc: Original connection does not cleared if the uri is redirected
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal blocker
: 1.10.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-10 06:37 UTC by Seungha Yang
Modified: 2017-02-22 14:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
souphttpsrc: Extract redirection uri on libsoup's restarted callback (2.78 KB, patch)
2017-02-10 12:00 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2017-02-10 06:37:53 UTC
Bug #777222 changed redirection handling on souphttpsrc, 
that is, souphttpsrc explicitly requests again for the redirected uri.
(i.e., does not use libsoup's automatic redirection)

That approach seems to cause regression for adaptivedemux use-case.
Comment 1 Seungha Yang 2017-02-10 12:00:06 UTC
Created attachment 345440 [details] [review]
souphttpsrc: Extract redirection uri on libsoup's restarted callback

Let libsoup handle redirection automatically.
And then, to figure out redirection uri, extract it on "restarted"
callback which will be fired before soup_session_send() is returned.
Comment 2 Arnaud Vrac 2017-02-22 13:10:28 UTC
The patch looks good and works fine, there's a slight difference from before: before the number of redirects was limited to the value of the 'retries' property, while now the limit is hardcoded in libsoup to 20. I think this is better now, the 'retries' property should only concern errors.
Comment 3 Sebastian Dröge (slomo) 2017-02-22 14:15:51 UTC
Attachment 345440 [details] pushed as 804f238 - souphttpsrc: Extract redirection uri on libsoup's restarted callback